--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ rich>=13.0.0
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 streamlit>=1.28.0
+prometheus-client>=0.19.0
+flask>=3.0.0
+pyyaml>=6.0.0
 
 # Optional (for .env file support)
 # python-dotenv>=1.0.0
